Resolves: tdf#122744 pt/% values not limited to historic limits

Change-Id: I439bf27b3f57838d9d0ea19605fd1b684ad4f777
Reviewed-on: https://gerrit.libreoffice.org/66475
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>